# jsonlz4

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
tests/: cli.rs  format_compatibility.rs
